crates/puffin_parser/src/tests/snapshots/puffin_parser__tests__parser__basic_fn_call.snap
---
source: crates/puffin_parser/src/tests/parser.rs
expression: "standard_test(\"hello()\")"
---
SOURCE_FILE@0..=6
    EXPR_STMT@0..=6
        FUNC_EXPR@0..=6
            hello |IDENT@0..4
            FUNC_PARAM@5..=6
                ( |L_PAREN@5..5
                ) |R_PAREN@6..6
