crates/puffin_parser/src/tests/snapshots/puffin_parser__tests__parser__block_expr_2.snap
---
source: crates/puffin_parser/src/tests/parser.rs
expression: "standard_test(\"{\\nprint 1 + 1\\n}\")"
---
SOURCE_FILE@0..=14
    EXPR_STMT@0..=14
        BLOCK_EXPR@0..=14
            { |L_BRACE@0..0
            
 |NL@1..1
            PRINT_STMT@2..=13
                print |KW_PRINT@2..6
                  |WHITESPACE@7..7
                BIN_EXPR@8..=12
                    PAT_EXPR@8..=8
                        LIT_PAT@8..=8
                            1 |INT@8..8
                      |WHITESPACE@9..9
                    + |PLUS@10..10
                      |WHITESPACE@11..11
                    PAT_EXPR@12..=12
                        LIT_PAT@12..=12
                            1 |INT@12..12
                
 |NL@13..13
            } |R_BRACE@14..14
